--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,12 @@
-aiofiles==0.8.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiohttp-client-cache==0.12.4
-aiolimiter==1.2.1
-aiosignal==1.3.1
-aiosqlite==0.17.0
-annotated-types==0.7.0
-apprise==1.9.2
-arrow==1.3.0
-asyncpraw==7.8.1
-asyncprawcore==2.4.0
-attrs==23.2.0
-beautifulsoup4==4.12.3
 blinker==1.9.0
-browser-cookie3==0.19.1
-certifi==2024.12.14
-charset-normalizer==3.3.2
 click==8.1.8
-cyberdrop-dl==5.3.31
-cyberdrop-dl-patched==6.2.0.post1
-distlib==0.3.9
 dnspython==2.7.0
-filedate==3.0
-filelock==3.17.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-PyMongo==3.0.1
-frozenlist==1.4.1
-get-video-properties==0.1.1
-idna==3.7
-inquirerpy==0.3.4
 itsdangerous==2.2.0
 Jinja2==3.1.5
-lxml==5.3.0
-lz4==4.3.3
-Markdown==3.7
-markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-mdurl==0.1.2
-mediafire==0.6.1
-multidict==6.0.5
-mutagen==1.47.0
-myjdapi==1.1.7
-oauthlib==3.2.2
-packaging==24.2
-pfzy==0.3.4
-pillow==10.4.0
-pipenv==2024.4.1
-platformdirs==4.3.6
-prompt-toolkit==3.0.43
-propcache==0.2.1
-pycryptodome==3.20.0
-pycryptodomex==3.21.0
-pydantic==2.10.5
-pydantic_core==2.27.2
-Pygments==2.18.0
 pymongo==4.11.1
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-requests==2.31.0
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-Send2Trash==1.8.3
-six==1.16.0
-soupsieve==2.5
-tabulate==0.9.0
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.12.2
-update-checker==0.18.0
-url-normalize==1.4.3
-urllib3==2.2.1
-virtualenv==20.29.2
-wcwidth==0.2.13
+python-dotenv==1.0.1
 Werkzeug==3.1.3
-xxhash==3.5.0
-yarl==1.18.3
